# Amadeus-Pocket-OS

./: .gitignore  LICENSE  Procfile  README.md  env.example  pyproject.toml  railway.json  requirements.txt
migrations/: 001_create_sessions_table.sql
src/amadeus/: api.py  config.py  config_watch.py  logging.py  markdown.py  model.py  plugins.py  progress.py  runner.py  runner_bridge.py  runtime_loader.py  settings.py
src/amadeus/api/: __init__.py  api.py  runtime_loader.py
src/amadeus/cli/: __init__.py  config.py  doctor.py  init.py  multiuser.py  onboarding_cmd.py  plugins.py  run.py
src/amadeus/core/: router.py
src/amadeus/db/: __init__.py  database.py  encryption.py  models.py  multiuser_handler.py  user_onboarding.py
src/amadeus/github/: __init__.py  actions_runner.py  client.py  telegram_handlers.py  workflow.py
src/amadeus/runners/: claude.py  codex.py  mock.py  opencode.py  pi.py  run_options.py
src/amadeus/sessions/: __init__.py  manager.py
src/amadeus/telegram/: api_schemas.py  backend.py  bridge.py  files.py  multiuser_loop.py  onboarding.py
src/amadeus/telegram/commands/: executor.py
src/amadeus/transports/: registry.py  transport_runtime.py
src/amadeus/ui/: __init__.py  keyboards.py  messages.py
src/amadeus/utils/: __init__.py  paths.py
src/amadeus/workspaces/: __init__.py  flyio_client.py  manager.py
