[project]
name = "amadeus-pocket-os"
authors = [{name = "X-Ventures"}]
version = "0.1.0"
description = "Self-hosted AI coding agent bridge - control your AI assistants from anywhere"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.12.0",
  "cryptography>=42.0.0",
  "httpx>=0.28.1",
  "markdown-it-py",
  "msgspec>=0.20.0",
  "openai>=2.15.0",
  "psycopg2-binary>=2.9.9",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "questionary>=2.1.1",
  "rich>=14.2.0",
  "structlog>=25.5.0",
  "sulguk>=0.11.1",
  "tomli-w>=1.2.0",
  "typer>=0.21.0",
  "watchfiles>=0.21.0",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Code Generators",
]
keywords = ["ai", "coding", "telegram", "claude", "codex", "bridge", "agents", "self-hosted"]

[project.urls]
Homepage = "https://github.com/X-Ventures/Amadeus-Pocket-OS"
Repository = "https://github.com/X-Ventures/Amadeus-Pocket-OS"
Issues = "https://github.com/X-Ventures/Amadeus-Pocket-OS/issues"

[project.scripts]
amadeus = "amadeus.cli:main"

[project.entry-points."amadeus.engine_backends"]
codex = "amadeus.runners.codex:BACKEND"
claude = "amadeus.runners.claude:BACKEND"
opencode = "amadeus.runners.opencode:BACKEND"
pi = "amadeus.runners.pi:BACKEND"

[project.entry-points."amadeus.transport_backends"]
telegram = "amadeus.telegram.backend:BACKEND"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amadeus"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
addopts = ["--cov=amadeus", "--cov-branch", "--cov-report=term-missing"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["B", "C4", "PERF", "SIM", "UP"]
